--- a/app/src/main/res/layout/activity_google_sign_in.xml
+++ b/app/src/main/res/layout/activity_google_sign_in.xml
@@ -16,7 +16,7 @@
         <ImageView
                 android:id="@+id/googleIcon"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"/>
 
         <TextView
                 android:id="@+id/titleText"
@@ -24,11 +24,12 @@
                 android:layout_height="wrap_content"/>
 
         <TextView
-                android:id="@+id/status"/>
+                android:id="@+id/status" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
         <TextView
                 android:id="@+id/detail"
-                tools:text="Firebase User ID: 123456789abc" />
+                tools:text="Firebase User ID: 123456789abc" android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
 
     </LinearLayout>
 
@@ -44,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:visibility="visible"
-                tools:visibility="gone" />
+                tools:visibility="gone"/>
 
         <LinearLayout
                 android:id="@+id/signOutAndDisconnect"
