Try to migrate to models

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,9 @@
             android:text="Read Element"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/readElementBtn"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/widgetsLayout">
+    </LinearLayout>
 </LinearLayout>
